--- a/Views/Query/StaffQuery/AssignQuery.cshtml
+++ b/Views/Query/StaffQuery/AssignQuery.cshtml
@@ -11,12 +11,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
    
 
-<div class="container-fluid">
+<div class="container-fluid px-4 py-3">
     <div class="row">
         <div class="col-12">
             <div class="card card-staff-list">
