--- a/Views/Account/Register.cshtml
+++ b/Views/Account/Register.cshtml
@@ -73,10 +73,19 @@
             </div>
 
 
-            <div class="form-group">
-                <label for="studentNumber">Student Number</label>
+
+            
+            @if (Model.Role == ("Student"))
+            {
+                <div class="form-group">
+                    <label for="studentNumber">Student Number</label>
                 <input type="text" class="form-control" id="studentNumber" name="studentNumber" placeholder="Enter Your Student Number" value="@Model.studentNumber" required>
             </div>
+            }
+
+
+
+
 
             <div>
                 <label for="department">Select Department</label>
