--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -68,6 +68,14 @@
                             <img src="~/svgs/ticket.svg" alt="Queries Icon" class="icon" /><span>Queries</span>
                         </a>
                     </li>
+
+
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Faq" asp-action="Index">
+                                <img src="~/Svgs/faq.png" alt="FAQs Icon" class="icon" /><span>FAQs</span>
+                            </a>
+                        </li>
+
                 }
 
 
