--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -4,6 +4,8 @@
 *@
 @{
     Layout = "~/Views/Shared/MinimalLayout.cshtml";
+    var firebaseConfig = Environment.GetEnvironmentVariable("FIREBASE_CONFIG");
+
 }
 
 <link href="~/css/Login.css" rel="stylesheet" type="text/css" />
@@ -116,15 +118,8 @@
         <script>
             console.log('Starting Firebase initialization...');
 
-            const firebaseConfig = {
-                apiKey: "AIzaSyDXB0dEozyPQdXzlGyQFP1elMObEksarR0",
-                authDomain: "uqms-a3d87.firebaseapp.com",
-                projectId: "uqms-a3d87",
-                storageBucket: "uqms-a3d87.appspot.com",
-                messagingSenderId: "728626322581",
-                appId: "1:728626322581:web:a5809843d30cf49aef4f9c",
-                measurementId: "G-ZGLBS2PFY8"
-            };
+            const firebaseConfig = @Html.Raw(firebaseConfig);
+
 
             try {
                 const app = firebase.initializeApp(firebaseConfig);
