--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -70,15 +70,23 @@
                     </li>
 
 
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Faq" asp-action="Index">
-                                <img src="~/Svgs/faq.png" alt="FAQs Icon" class="icon" /><span>FAQs</span>
-                            </a>
-                        </li>
-
+                    
                 }
 
 
+
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Faq" asp-action="Index">
+                            <img src="~/Svgs/faq.png" alt="FAQs Icon" class="icon" /><span>FAQs</span>
+                        </a>
+                    </li>
+
+
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" asp-area="" asp-controller="KnowledgeBase" asp-action="Index">
+                            <img src="~/Svgs/faq.png" alt="FAQs Icon" class="icon" /><span>KnowledgeBase</span>
+                        </a>
+                    </li>
 
 
 
